--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1,5 +1,29 @@
+footer{
+	background-color: pink;
+	width: 85%;
+	height: 18.75rem;
+	text-align: center;
+	margin: auto;
+	position: relative;
+	border-radius: 1.5625rem;
+	/* 加阴影部份 */
+	box-shadow: 5px 5px 5px 0 rgb(0,0,0,.05);
+	-webkit-box-shadow: #000000 2px 2px 10px;
+	-moz-box-shadow: #ffff7f 0px 0px 10px;
+}
+
 #copyright {
 	background-color: #bab1bc;
+	position: absolute;
+	margin: auto;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border-radius: 1.5625rem;
+	width: 99%;
+	height: 96%;
+	text-align: center;
 }
 
 #img-logo {
