--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1,3 +1,18 @@
+#header {
+	background-color: #aaaaff;
+	position: relative;
+	z-index: 999;
+	width: 100%;
+	height: 90px;
+}
+#header-active {
+	position: fixed;
+	top: 0;
+}
+
+
+
+
 footer{
 	background-color: pink;
 	width: 85%;
