--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,1 +1,28 @@
+.Pmiddle {
+	background-color: #00649B;
+	width: 80%;
+	text-align: center;
+	margin: auto;
+	position: relative;
+	border-radius: 1.5625rem;
+	/* 加阴影部份 */
+	box-shadow: 5px 5px 5px 0 rgb(0,0,0,.05);
+	-webkit-box-shadow: #000000 2px 2px 10px;
+	-moz-box-shadow: #ffff7f 0px 0px 10px;
+}
 
+#middle {
+	background-color: #00BDEC;
+	text-align: center;
+	/* position: relative; */
+	width: 99%;
+	height: 90%;
+	margin: 5px;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	border-radius: 1.5625rem;
+	
+}
