--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -1,7 +1,7 @@
 footer{
-	background-color: #ffffff;
-	width: 85%;
-	height: 10rem;
+	background-color: #f1f1f0;
+	width: 95%;
+	height: 15rem;
 	text-align: center;
 	margin: auto;
 	position: relative;
@@ -11,6 +11,7 @@ footer{
 	-webkit-box-shadow: #353535 2px 2px 10px;
 	-moz-box-shadow: #ffffff 0px 0px 10px;
 	margin-bottom: 1rem;
+	margin-top: 10px;
 }
 
 #copyright {
@@ -24,7 +25,7 @@ footer{
 	border-radius: 1.5625rem;
 	width: 99%;
 	height: 96%;
-	text-align: center;
+	text-align: left;
 }
 
 #img-logo {
@@ -38,9 +39,19 @@ footer{
 
 .row2 {
 	position: absolute;
-	text-align: center;
-	top: 25%;
+	text-align: left;
+	top: 15%;
 	left: 5%;
 	right: 0;
 	bottom: 0;
+}
+.part_content{
+	width: 80%;
+	background-color: #e7e7e7;
+	border-radius: 25px;
+	text-align: center;
+	margin: auto;
+}
+.part_content p{
+	text-align: left;
 }
