--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1587,7 +1587,8 @@ Author:     Electronthemes
   .post-full-content h3 {
     font-size: 30px; }
   .post-full-content h4 {
-    font-size: 24px; }
+    font-size: 24px; 
+	text-align: left;}
   .post-full-content h5 {
     font-size: 20px; }
   .post-full-content h6 {
