--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -1,4 +1,4 @@
-footer{
+footer {
 	background-color: #f1f1f0;
 	width: 95%;
 	height: 15rem;
@@ -7,7 +7,7 @@ footer{
 	position: relative;
 	border-radius: 1.5625rem;
 	/* 加阴影部份 */
-	box-shadow: 5px 5px 5px 0 rgb(0,0,0,.05);
+	box-shadow: 5px 5px 5px 0 rgb(0, 0, 0, .05);
 	-webkit-box-shadow: #353535 2px 2px 10px;
 	-moz-box-shadow: #ffffff 0px 0px 10px;
 	margin-bottom: 1rem;
@@ -45,13 +45,88 @@ footer{
 	right: 0;
 	bottom: 0;
 }
-.part_content{
+
+.part_content {
 	width: 80%;
 	background-color: #e7e7e7;
 	border-radius: 25px;
 	text-align: center;
 	margin: auto;
 }
-.part_content p{
+
+.part_content p {
 	text-align: left;
+}
+
+
+.main_page {
+	/* background-image: url(../../static/picture/main.png);
+	background-size: 100vm;
+	background-repeat: no-repeat;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	z-index: -999999999;
+	top: 29px; */
+}
+
+.index_content {
+	margin: auto;
+	text-align: center;
+	width: 90%;
+	height: auto;
+	margin-top: 50%;
+	background-color: rgb(240 249 255);
+	margin: 560px auto 0px auto;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	border: 1px rgb(255 255 255) solid;
+	box-shadow: 5px 5px 10px grey;
+	border-radius: 50px;
+}
+
+.index_content p {
+	text-align: left;
+	padding-top: 25px;
+	padding-top: 25px;
+	margin-left: 16%;
+	margin-right: 16%;
+	width: 68%;
+	height: 75%;
+}
+
+.index_content h3 {
+	text-align: left;
+	padding-top: 25px;
+	padding-top: 25px;
+	margin-left: 16%;
+	margin-right: 16%;
+	width: 68%;
+	height: 75%;
+}
+
+#getthecoin {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 100%;
+	height: 1vw;
+	margin-top: -100px;
+	background: transparent;
+}
+
+#getthecoin .container {
+	position: relative;
+	width: 24px;
+	height: 24px;
+}
+
+.chevron {
+	position: absolute;
+	width: 28px;
+	height: 8px;
+	opacity: 0;
+	transform: scale3d(0.5, 0.5, 0.5);
+	animation: move 3s ease-out infinite;
 }
