--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -112,11 +112,11 @@ footer {
 	position: absolute;
 	width: 100%;
 	height: 1vw;
-	margin-top: -100px;
+	margin-top: 100px;
 	background: transparent;
 }
 
-#getthecoin .container {
+.chevon_container {
 	position: relative;
 	width: 24px;
 	height: 24px;
@@ -130,3 +130,47 @@ footer {
 	transform: scale3d(0.5, 0.5, 0.5);
 	animation: move 3s ease-out infinite;
 }
+
+.chevron:first-child {
+	animation: move 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+	animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+	content: ' ';
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 51%;
+	background: #5f84a8;
+}
+
+.chevron:before {
+	left: 0;
+	transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+	right: 0;
+	width: 50%;
+	transform: skew(0deg, -30deg);
+}
+
+
+.text {
+	display: block;
+	margin-top: 75px;
+	margin-left: -30px;
+	font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+	font-size: 12px;
+	color: #5f84a8;
+	text-transform: uppercase;
+	white-space: nowrap;
+	opacity: .25;
+	animation: pulse 2s linear alternate infinite;
+}
+
