--- a/assets/css/base-style.css
+++ b/assets/css/base-style.css
@@ -7427,8 +7427,8 @@ p {
   padding: 50px 0px; }
 
 svg {
-  max-height: 50px;
-  max-width: 50px; }
+  max-height: 0;
+  max-width: 0px; }
 
 .icon-svg {
   height: 20px;
